# rust-plugins

./: Cargo.toml  README.md
plugins/: Cargo.toml
plugins-example/: Cargo.toml
plugins-example/src/: main.rs
plugins/src/: error.rs  lib.rs  macros.rs  manager.rs  types.rs
