[package]
name = "plugins"
version = "0.3.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
error-chain = "~0.12.0"
libc = { version = "^0.2", optional = true }
libloading = { version = "^0.5.0", optional = true }

[features]
default = []
dll = ["libc", "libloading"]